About Me Image Spacing Fix

--- a/assets/main.css
+++ b/assets/main.css
@@ -31,7 +31,7 @@ nav.navbar {
 }
 
 .about-me .image-overlay img {
-	width: 70%;
+	width: 60%;
 	min-width: 150px;
 }
 
